--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="/static/commons.css">
-    <form>
+    <form method="post">
         <!--<h1 style="color:red">用户登录</h1>-->
         <h1>用户登录</h1>
-        <p><input type="text" placeholder="用户名" /></p>
-        <p><input type="password" placeholder="密码" /></p>
+        <p><input type="text" placeholder="用户名" name="user"/></p>
+        <p><input type="password" placeholder="密码" name="pwd"/></p>
         <p><input type="submit" value="登录"/></p>
     </form>
+    {{ error_msg }}
 </head>
 <body>
 
